1) Revise IChoice Activity Layout and Functionality 2) Added Sync Data with IChoice , split data and insert into DB 3) Revise some validation 4) Revise Login Checking to prevent memory leaks 5) Revise DateTime IChoice Method to trim white space 6) Added GCM Refresh Token 7) Fix Some Bug

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -107,6 +107,11 @@
         sending the fetched token to the server or subscribing to the PubSub topic. Please try
         running the sample again.</string>
 
+    <!-- IChoice Activity -->
+    <string name="btn_lbl_find">FIND DEVICE</string>
+    <string name="btn_lbl_link">LINK DEVICE</string>
+    <string name="btn_lbl_unlink">UNLINK DEVICE</string>
+
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="title_activity_ichoice">IChoiceActivity</string>
