--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -3,8 +3,8 @@
     <string name="app_name">FitnessCompanion</string>
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
-    <string name="login">Login</string>
-    <string name="forgetPassword"><u>Forget Password</u></string>
+    <string name="login">登录</string>
+    <string name="forgetPassword"><u>忘记密码</u></string>
 
     <!--profile-->
     <string name="title_activity_sign_up_page">SignUpPage</string>
@@ -44,12 +44,12 @@
     <string name="title_activity_health_profile_page">HealthProfilePage</string>
     <string name="Profile">Profile</string>
     <string name="title_activity_main_activity2">MainActivity2</string>
-    <string name="title_activity_metal_page">MedalPage</string>
+    <string name="title_activity_metal_page">MetalPage</string>
     <string name="metal">Metal</string>
-    <string name="walkMetalDividen">Walk Medal </string>
-    <string name="runMetalDividen">Run Medal </string>
-    <string name="cycleMetalDividen">Cycle Medal </string>
-    <string name="hikeMetalDividen">Hike Medal </string>
+    <string name="walkMetalDividen">Walk Metal </string>
+    <string name="runMetalDividen">Run Metal </string>
+    <string name="rideMetalDividen">Ride Metal </string>
+    <string name="hikeMetalDividen">Hike Metal </string>
     <string name="title_activity_history_page">HistoryPage</string>
     <string name="title_activity_ranking_page">RankingPage</string>
     <string name="history">History</string>
@@ -108,24 +108,22 @@
         running the sample again.</string>
 
     <!-- IChoice Activity -->
-    <string name="btn_lbl_find">FIND DEVICE</string>
-    <string name="btn_lbl_link">LINK DEVICE</string>
-    <string name="btn_lbl_unlink">UNLINK DEVICE</string>
-    <string name="get_history">GET HISTORY DATA</string>
-    <string name="set_profile">SET PROFILE</string>
-    <string name="set_greetings">SET GREETING</string>
-    <string name="set_targets">SET TARGET</string>
-    <string name="set_distance_unit">SET DISTANCE UNIT</string>
-    <string name="set_celsius_unit">SET CELSIUS UNIT</string>
-    <string name="set_time">SET TIME</string>
+    <string name="btn_lbl_find">查找设备</string>
+    <string name="btn_lbl_link">连接设备</string>
+    <string name="btn_lbl_unlink">断开设备</string>
+    <string name="get_history">获取历史数据</string>
+    <string name="set_profile">设置设备用户信息</string>
+    <string name="set_greetings">设置问候语</string>
+    <string name="set_targets">设置锻炼目标</string>
+    <string name="set_distance_unit">设置距离单位</string>
+    <string name="set_celsius_unit">设置温度单位</string>
+    <string name="set_time">设置时间</string>
+
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="title_activity_ichoice">IChoiceActivity</string>
     <string name="estimateCalories">Estimate calories per minutes :</string>
-    <string name="title_activity_challenge_page">ChallengePage</string>
-    <string name="title_activity_event_page">EventPage</string>
-    <string name="title_activity_my_sleep_data_graph_view">MySleepDataGraphView</string>
 
 
 
