--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -45,11 +45,11 @@
     <string name="Profile">Profile</string>
     <string name="title_activity_main_activity2">MainActivity2</string>
     <string name="title_activity_metal_page">MetalPage</string>
-    <string name="metal">Metal</string>
-    <string name="walkMetalDividen">Walk Metal </string>
-    <string name="runMetalDividen">Run Metal </string>
-    <string name="rideMetalDividen">Ride Metal </string>
-    <string name="hikeMetalDividen">Hike Metal </string>
+    <string name="metal">奖牌</string>
+    <string name="walkMetalDividen">步数奖牌</string>
+    <string name="runMetalDividen">跑步奖牌 </string>
+    <string name="rideMetalDividen">脚踏车奖牌</string>
+    <string name="hikeMetalDividen">爬上奖牌</string>
     <string name="title_activity_history_page">HistoryPage</string>
     <string name="title_activity_ranking_page">RankingPage</string>
     <string name="history">History</string>
