1. warm up & cool down in exercise 2. update DB ( goal and activity plan) 3. update server req *php too 4. update 2 icon -- common and recommend with new name 5. congragulation notification [coming soon] 6. Fix goal bug

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -127,6 +127,7 @@
     <string name="title_activity_event_page">EventPage</string>
     <string name="title_activity_my_sleep_data_graph_view">MySleepDataGraphView</string>
     <string name="title_activity_activity_plan_page">ActivityPlanPage</string>
+    <string name="title_activity_congratulation_page">CongratulationPage</string>
 
 
 
