--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -45,7 +45,7 @@
     <string name="Profile">Profile</string>
     <string name="title_activity_main_activity2">MainActivity2</string>
     <string name="title_activity_metal_page">MedalPage</string>
-    <string name="metal">Metal</string>
+    <string name="medal">Medal</string>
     <string name="walkMetalDividen">Walk Medal </string>
     <string name="runMetalDividen">Run Medal </string>
     <string name="cycleMetalDividen">Cycle Medal </string>
