--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,6 +5,30 @@
     <string name="action_settings">Settings</string>
     <string name="login">Login</string>
     <string name="forgetPassword"><u>Forget Password</u></string>
+    <string name="facebook_app_id">1682339881994052</string>
+    <string name="nullString">NULL</string>
+
+    <!-- auto generate -->
+    <string name="title_activity_profile_page">ProfilePage</string>
+    <string name="title_activity_user_profile_page">UserProfilePage</string>
+    <string name="title_activity_screen_slide_pager">ScreenSlidePagerActivity</string>
+    <string name="title_activity_screen_slide_page_fragment">ScreenSlidePageFragment</string>
+    <string name="title_activity_health_profile_page">HealthProfilePage</string>
+    <string name="title_activity_achievement_menu">AchievementMenu</string>
+    <string name="title_activity_history_page">HistoryPage</string>
+    <string name="title_activity_ranking_page">RankingPage</string>
+    <string name="title_activity_HRStrip">HeartRateDeviceScan</string>
+    <string name="title_activity_schedule_pause_alarm">SchedulePauseAlarm</string>-->
+    <string name="title_activity_forget_password">ForgetPassword</string>
+    <string name="title_activity_profile_menu">ProfileMenu</string>
+    <string name="title_activity_main_menu">MainMenu</string>
+    <string name="title_activity_exercise_menu">ExerciseMenu</string>
+    <string name="title_activity_main_activity2">MainActivity2</string>
+    <string name="title_activity_metal_page">MedalPage</string>
+    <string name="title_activity_goal_page">GoalPage</string>
+    <string name="title_activity_schedule_page">SchedulePage</string>
+    <string name="title_activity_friends_page">FriendsPage</string>
+    <string name="title_activity_schedule_new_page">ScheduleNewPage</string>
 
     <!--profile-->
     <string name="title_activity_sign_up_page">SignUpPage</string>
@@ -26,58 +50,31 @@
     <string name="BMI">Body Mass Index (BMI)</string>
     <string name="WHR">Waist to Hip Ratio (WHR)</string>
 
-    <string name="signUp">Sign Up</string>
-    <string name="title_activity_main_menu">MainMenu</string>
-    <string name="home">Home</string>
-    <string name="signUpRemind">*Required</string>
-    <string name="title_activity_profile_menu">ProfileMenu</string>
-    <string name="profileMenu">Profile Menu</string>
-    <string name="title_activity_achievement_menu">AchievementMenu</string>
-    <string name="achievementMenu">Achievement Menu</string>
-    <string name="title_activity_exercise_menu">ExerciseMenu</string>
-    <string name="doExercise">Do Exercise</string>
-    <string name="start">Start Exercise</string>
-    <string name="title_activity_profile_page">ProfilePage</string>
-    <string name="title_activity_user_profile_page">UserProfilePage</string>
-    <string name="title_activity_screen_slide_pager">ScreenSlidePagerActivity</string>
-    <string name="title_activity_screen_slide_page_fragment">ScreenSlidePageFragment</string>
-    <string name="title_activity_health_profile_page">HealthProfilePage</string>
-    <string name="Profile">Profile</string>
-    <string name="title_activity_main_activity2">MainActivity2</string>
-    <string name="title_activity_metal_page">MedalPage</string>
-    <string name="medal">Medal</string>
+    <!--Achievement-->
+    <string name="goTo"> > </string>
+
+    <!-- Medal -->
+    <string name="medalTitle">Medal</string>
     <string name="walkMetalDividen">Walk Medal </string>
     <string name="runMetalDividen">Run Medal </string>
     <string name="cycleMetalDividen">Cycle Medal </string>
     <string name="hikeMetalDividen">Hike Medal </string>
-    <string name="title_activity_history_page">HistoryPage</string>
-    <string name="title_activity_ranking_page">RankingPage</string>
-    <string name="history">History</string>
-    <string name="ranking">Ranking</string>
-    <string name="title_activity_goal_page">GoalPage</string>
-    <string name="goal">Goal</string>
-    <string name="myGoal">My Goal :</string>
-    <string name="newGoal">Add New Goal</string>
-    <string name="title_activity_schedule_page">SchedulePage</string>
-    <string name="schedule">Schedule</string>
-    <string name="title_activity_schedule_new_page">ScheduleNewPage</string>
-    <string name="newSchedule">New Reminder</string>
-    <string name="activities">Activities</string>
-    <string name="repeat">Repeat</string>
-    <string name="time">Time</string>
-    <string name="day">Day</string>
-    <string name="date">Date</string>
-    <string name="save">Save</string>
-    <string name="cancel">Cancel</string>
-    <string name="title_activity_friends_page">FriendsPage</string>
-    <string name="friends">Friends</string>
-    <string name="setting">Setting</string>
-    <string name="title_activity_forget_password">ForgetPassword</string>
-    <string name="facebook_app_id">1682339881994052</string>
-    <string name="title_activity_HRStrip">HeartRateDeviceScan</string>
-    <string name="title_activity_schedule_pause_alarm">SchedulePauseAlarm</string>
 
-    <!--HR BLE-->
+    <!-- Ranking -->
+    <string name="rankingTitle">Ranking</string>
+
+    <!-- History -->
+    <string name="historyTitle">History</string>
+
+    <!-- Event -->
+    <string name="eventTitle">Event</string>
+
+    <!-- Sign UP-->
+    <string name="signUp">Sign Up</string>
+    <string name="signUpRemind">*Required</string>
+
+
+    <!---HR BLE-->
     <string name="ble_not_supported">BLE is not supported</string>
     <string name="label_data">Data:</string>
     <string name="label_device_address">Device address:</string>
