--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -173,6 +173,7 @@
     <string name="set_distance_unit">SET DISTANCE UNIT</string>
     <string name="set_celsius_unit">SET CELSIUS UNIT</string>
     <string name="set_time">SET TIME</string>
+    <string name="tutorial_instrustion">You Need Turn Off Your IChoice Device To Sleep Mode After Click Find Device, Then Switch Back When Bluetooth is On</string>
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
